tests/paczka1/small_fuzzy/38527803.err
Error in line 1: KUen A9+ 48,0
Error in line 5: rzZq A347 66,2
Error in line 9: rzZq A95 18,2
Error in line 6: NqAnLYS2 S636 49,6
Error in line 11: NqAnLYS2 A347 89,4
Error in line 15: A347 S636 -4,9
